# puppy-rs

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Doxyfile  Makefile  README.md  build.gradle  config.yml
src/: api.c  api.h  bot.c  bot.h  bot.rs  cache.c  cache.h  color.rs  commands.c  commands.h  log.c  log.h  main.c  main.rs  module.rs
src/main/java/gay/pancake/purrify/: Purrify.java
src/main/java/gay/pancake/purrify/api/: ApiEndpoints.java  NekosBestApi.java
src/module/: random.rs  reaction.rs  status.rs
src/module/reaction/: backend.rs
src/module/reaction/backend/: nekosbest.rs  otakugifs.rs
