[package]
name = "puppyrs"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["builder", "interactions_endpoint", "unstable_discord_api"] }
reqwest = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
log = "0.4"
colog = "1.3"
clap = "4.5"
